    that can be used to determine nearby vehicle relative distance.
    Each circle's default radius value is "10" meter apart.
    Note, circle marks are only displayed if "distance_circle_*_radius" values
    are within "radar_radius" value.

* Relative, Rivals, Standings Widget
  - Now draws logo only once per unique brand and stores image in cache.

2.14.0 (2024-06-14)
-----------------------------
* General
  - Config window can now be opened by double-clicking on tray icon.

* Vehicle Brand Editor
  - Add new "import from" menu, which allows importing
    brand info directly from Rest API.
    To import from Rest API, just make sure game is running,
    then click either "RF2 Rest API" or "LMU Rest API" from menu, done.
    Note, import function uses connection setting from "RestAPI Module".

* Fuel calculator
  - Add "Virtual Energy" history data and calculation.
    All fuel calculation outputs are now aligned on the left side,
    and virtual energy outputs on the right side for easy comparison.
    See user guide "Fuel calculator" section for details.
  - Add "Fuel ratio" output, which is automatically calculated from
    fuel and virtual energy consumption values.
  - Lap time values are now automatically carried over between spin boxes
    when exceeded min or max value range.
    It is now quicker and easier to adjust lap time by
    mouse clicking or scrolling.
  - "Reload" button now only updates valid lap time data
    to lap time spin boxes.

* [New]Energy Module
  - Add Energy Module for calculating virtual energy usage in LMU.
  - Add new "energy delta" user data file that stored as "CSV" format
    (.energy extension) under "TinyPedal\deltabest" folder.
    Energy delta data can be reset by accessing "Reset" menu.

* RestAPI Module
  - Read "virtual energy" values from LMU's Rest API
    for used in Energy Module.
  - Read "steering wheel range" value from LMU's Rest API
    for used in Steering Widget.